# opengl-skity

./: README.md  meson.build  meson_options.txt
examples/: main.cpp  meson.build
include/: meson.build
include/SomeGui/: application.hpp  applicationWindow.hpp  canvas.hpp  glfw.hpp  log.hpp  meson.build  namespace.hpp  os.hpp  window.hpp
include/SomeGui/interface/: application.hpp  applicationWindow.hpp  canvas.hpp  meson.build
src/: application.cpp  applicationWindow.cpp  canvas.cpp  glad.cpp  log.cpp  meson.build  window.cpp
src/arch/linux/: meson.build  os.cpp
